# Apply-parallel-on-Convolution-forward-phase-in-CNN-Lenet5

./: CMakeLists.txt  Makefile  build_dnn.h  main  main.cc  readme.md  train.cc
model/logging/: log_10_128.txt  log_10_32.txt  log_32_64.txt
src/: CMakeLists.txt  mnist.cc  network.cc  network.h
src/layer/: conv.cc  conv.h  conv_gpu.cc  conv_gpu.h
src/layer/custom/: gpu_conv_forward.h  gpu_conv_forward_v0.cu  gpu_conv_forward_v1.cu  gpu_conv_forward_v2.cu  gpu_conv_forward_v3.cu  gpu_conv_forward_v4.cu  gpu_utils.cc  gpu_utils.h
